fix page break in <pre> boxes

--- a/documentation/stream.css
+++ b/documentation/stream.css
@@ -20,6 +20,7 @@ pre {
     border:1px solid #000000;
     white-space:pre;
     margin:2ex;
+    page-break-inside:avoid;
 }
 
 kbd {
